# activity04_student

./: .gitignore  README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
poetryProject/: README.md
poetryProject/primefinder/: pyproject.toml
poetryProject/primefinder/primefinder/: main.py
